create table change_log_port (id integer not null auto_increment default
0,change_log_id integer not null default 0, port_id integer not null default
0, primary key (id));


alter table change_log_details add column change_log_port_id integer;

alter table ports add column last_change_log_id integer;

update ports set last_change_log_id = 0;

alter table ports add depends_build text;

alter table ports add depends_run text;

