@@ -1,3 +1,9 @@
+#
+# $Id: permissions.txt,v 1.4.2.1 2002-01-06 07:25:13 dan Exp $
+#
+# Copyright (c) 1998-2001 DVL Software Limited
+#
+
 These permissions may be overly permissive.
 
 grant usage on freshports.* to freshports@localhost;
