@@ -1,3 +1,9 @@
+#
+# $Id: upgrade.1.txt,v 1.3.2.1 2002-01-06 07:25:13 dan Exp $
+#
+# Copyright (c) 1998-2001 DVL Software Limited
+#
+
 make database changes as found in changes.txt
 
 grant permissions using permissions.txt
