@@ -1,3 +1,9 @@
+#
+# $Id: changes.txt,v 1.2.2.1 2002-01-06 07:25:13 dan Exp $
+#
+# Copyright (c) 1998-2001 DVL Software Limited
+#
+
 create table change_log_port (id integer not null auto_increment default
 0,change_log_id integer not null default 0, port_id integer not null default
 0, primary key (id));
